flexboxos oldal szerkezet

--- a/public_html/stilus.css
+++ b/public_html/stilus.css
@@ -7,8 +7,26 @@ main {background: lightblue;}
 main, header, nav, footer, article {
     border: 1px solid gray;
     padding: 5px;
+    box-sizing: border-box;
 }
 
 header, nav, footer, article{
     background: white;
+    margin: 5px;
+}
+
+main{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+}
+
+header, nav, footer{
+    flex: 0 0 100%;
+    /*width: 100%;*/
+}
+
+article{
+    flex: 1 0 calc(33.3333% - 10px);
+    /*width: calc(33.3333% - 10px);*/
 }
