--- a/public_html/stilus.css
+++ b/public_html/stilus.css
@@ -19,6 +19,9 @@ main{
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
+    align-items: baseline;
+    justify-content: space-between;
+    align-content: stretch;
 }
 
 header, nav, footer{
@@ -27,6 +30,13 @@ header, nav, footer{
 }
 
 article{
-    flex: 1 0 calc(33.3333% - 10px);
+    flex: 0 0 calc(33.3333% - 10px);
     /*width: calc(33.3333% - 10px);*/
 }
+
+main article:nth-child(5){
+    color: blue;
+    order: -1;
+}
+
+header, nav {order: -10;}
